[package]
name = "pgfine"
version = "0.1.0"
authors = ["Marius Kavaliauskas <mariuskava@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
postgres = "0.19.0"
md-5 = "0.9.1"
hex = "0.4.2"